fix overflow contacto

--- a/contacto/contacto.css
+++ b/contacto/contacto.css
@@ -253,6 +253,7 @@ button {
   align-items: center;
   background-color: black;
   z-index: 99;
+  overflow: hidden;
 }
 #address h2 {
   font-size: 32px;
